--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-
+  height: 100vh;
   background-image: url('img/배경.jpg');
   background-repeat: no-repeat;
   background-size: cover;
